name = "constallation_vpc"
version = "0.1.0a"
description = "The VPC Module for constallation-aws"
authors = ["CoulterStutz <coultercash@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
